--- a/classsettings.ini
+++ b/classsettings.ini
@@ -2,6 +2,7 @@
 Inherits=
 TypeInformation=0
 className=ClassSettings
+typeOrder=QStringList, QString, TypeInheritsInformation, bool
 
 [FunctionsPolicy]
 ReadFunctionIsInline=true
@@ -31,6 +32,25 @@ WriteFunctionStart=
 1\typeStringName=
 1\user=false
 1\write=true
+10\constant=false
+10\defaultValue=false
+10\designable=true
+10\docDetail=
+10\docName=
+10\enabled=true
+10\final=false
+10\member=false
+10\name=WriteFunctionIsInline
+10\notify=false
+10\read=true
+10\reset=false
+10\revision=0
+10\scriptable=true
+10\stored=true
+10\type=bool
+10\typeStringName=
+10\user=false
+10\write=true
 2\constant=false
 2\defaultValue=@Invalid()
 2\designable=true
@@ -51,7 +71,7 @@ WriteFunctionStart=
 2\user=false
 2\write=true
 3\constant=false
-3\defaultValue=@Invalid()
+3\defaultValue=true
 3\designable=true
 3\docDetail=
 3\docName=
@@ -127,7 +147,7 @@ WriteFunctionStart=
 6\user=false
 6\write=true
 7\constant=false
-7\defaultValue=@Invalid()
+7\defaultValue=0
 7\designable=true
 7\docDetail=
 7\docName=
@@ -141,38 +161,38 @@ WriteFunctionStart=
 7\revision=0
 7\scriptable=true
 7\stored=true
-7\type=int
+7\type=
 7\typeStringName=TypeInheritsInformation
 7\user=false
 7\write=true
 8\constant=false
-8\defaultValue=@Invalid()
+8\defaultValue=
 8\designable=true
 8\docDetail=
 8\docName=
 8\enabled=true
 8\final=false
 8\member=false
-8\name=WriteFunctionEmitSignal
+8\name=TypeOrder
 8\notify=false
 8\read=true
 8\reset=false
 8\revision=0
 8\scriptable=true
 8\stored=true
-8\type=bool
+8\type=QStringList
 8\typeStringName=
 8\user=false
 8\write=true
 9\constant=false
-9\defaultValue=@Invalid()
+9\defaultValue=true
 9\designable=true
 9\docDetail=
 9\docName=
 9\enabled=true
 9\final=false
 9\member=false
-9\name=WriteFunctionIsInline
+9\name=WriteFunctionEmitSignal
 9\notify=false
 9\read=true
 9\reset=false
@@ -183,4 +203,4 @@ WriteFunctionStart=
 9\typeStringName=
 9\user=false
 9\write=true
-size=9
+size=10
