On branch master 	modified:   QtPropertyCodeGenerator.pro 	modified:   classsettings.cpp 	modified:   classsettings.h 	modified:   classsettings.ini 	new file:   classsettingsGeneratorFunctions.cpp 	new file:   classsettingsInlineFunctions.h 	new file:   classsettingsIterators.cpp 	modified:   dialogedit.cpp 	modified:   dialogedit.h 	modified:   dialogedit.ui 	modified:   dialogset.cpp 	modified:   dialogset.h 	modified:   dialogset.ui 	new file:   paraments.h 	modified:   propertiesgroup.cpp 	modified:   propertiesgroup.h 	modified:   propertiesgroupInlineFunctions.h 	modified:   propertiesgroupdata.cpp 	modified:   propertiesgroupdata.h 	modified:   property.cpp 	modified:   property.h 	modified:   propertyInlineFunctions.h 	modified:   propertydata.cpp 	modified:   propertydata.h 	modified:   sharedFunctions.h 	modified:   widget.cpp 	modified:   widget.h 	modified:   widget.ui 	1.实现属性组功能。 	2.添加paraments.h文件。 	3.优化结构。

--- a/classsettings.ini
+++ b/classsettings.ini
@@ -2,7 +2,7 @@
 Inherits=
 TypeInformation=0
 className=ClassSettings
-typeOrder=QStringList, QString, TypeInheritsInformation, bool
+typeOrder=QString, QStringList, TypeInheritsInformation, bool
 
 [FunctionsPolicy]
 ReadFunctionIsInline=true
@@ -10,7 +10,7 @@ WriteFunctionEmitSignal=false
 WriteFunctionIsInline=true
 WriteFunctionLast=
 WriteFunctionMiddle=
-WriteFunctionStart=
+WriteFunctionStart="    beforeWrite();\n"
 
 [properties]
 1\constant=false
@@ -33,21 +33,21 @@ WriteFunctionStart=
 1\user=false
 1\write=true
 10\constant=false
-10\defaultValue=false
+10\defaultValue=
 10\designable=true
 10\docDetail=
 10\docName=
 10\enabled=true
 10\final=false
 10\member=false
-10\name=WriteFunctionIsInline
+10\name=TypeOrder
 10\notify=false
 10\read=true
 10\reset=false
 10\revision=0
 10\scriptable=true
 10\stored=true
-10\type=bool
+10\type=QStringList
 10\typeStringName=
 10\user=false
 10\write=true
@@ -59,7 +59,7 @@ WriteFunctionStart=
 2\enabled=true
 2\final=false
 2\member=false
-2\name=Inherits
+2\name=DocDetail
 2\notify=false
 2\read=true
 2\reset=false
@@ -71,21 +71,21 @@ WriteFunctionStart=
 2\user=false
 2\write=true
 3\constant=false
-3\defaultValue=true
+3\defaultValue=@Invalid()
 3\designable=true
 3\docDetail=
 3\docName=
 3\enabled=true
 3\final=false
 3\member=false
-3\name=ReadFunctionIsInline
+3\name=DocName
 3\notify=false
 3\read=true
 3\reset=false
 3\revision=0
 3\scriptable=true
 3\stored=true
-3\type=bool
+3\type=QString
 3\typeStringName=
 3\user=false
 3\write=true
@@ -97,7 +97,7 @@ WriteFunctionStart=
 4\enabled=true
 4\final=false
 4\member=false
-4\name=StatementsAfterWriteProperty
+4\name=Inherits
 4\notify=false
 4\read=true
 4\reset=false
@@ -109,21 +109,21 @@ WriteFunctionStart=
 4\user=false
 4\write=true
 5\constant=false
-5\defaultValue=@Invalid()
+5\defaultValue=true
 5\designable=true
 5\docDetail=
 5\docName=
 5\enabled=true
 5\final=false
 5\member=false
-5\name=StatementsMiddleWriteProperty
+5\name=ReadFunctionIsInline
 5\notify=false
 5\read=true
 5\reset=false
 5\revision=0
 5\scriptable=true
 5\stored=true
-5\type=QString
+5\type=bool
 5\typeStringName=
 5\user=false
 5\write=true
@@ -135,7 +135,7 @@ WriteFunctionStart=
 6\enabled=true
 6\final=false
 6\member=false
-6\name=StatementsStartWriteProperty
+6\name=StatementsAfterWriteProperty
 6\notify=false
 6\read=true
 6\reset=false
@@ -147,60 +147,98 @@ WriteFunctionStart=
 6\user=false
 6\write=true
 7\constant=false
-7\defaultValue=0
+7\defaultValue=@Invalid()
 7\designable=true
 7\docDetail=
 7\docName=
 7\enabled=true
 7\final=false
 7\member=false
-7\name=TypeInderitsInfomation
+7\name=StatementsMiddleWriteProperty
 7\notify=false
 7\read=true
 7\reset=false
 7\revision=0
 7\scriptable=true
 7\stored=true
-7\type=
-7\typeStringName=TypeInheritsInformation
+7\type=QString
+7\typeStringName=
 7\user=false
 7\write=true
 8\constant=false
-8\defaultValue=
+8\defaultValue=@Invalid()
 8\designable=true
 8\docDetail=
 8\docName=
 8\enabled=true
 8\final=false
 8\member=false
-8\name=TypeOrder
+8\name=StatementsStartWriteProperty
 8\notify=false
 8\read=true
 8\reset=false
 8\revision=0
 8\scriptable=true
 8\stored=true
-8\type=QStringList
+8\type=QString
 8\typeStringName=
 8\user=false
 8\write=true
 9\constant=false
-9\defaultValue=true
+9\defaultValue=0
 9\designable=true
 9\docDetail=
 9\docName=
 9\enabled=true
 9\final=false
 9\member=false
-9\name=WriteFunctionEmitSignal
+9\name=TypeInderitsInfomation
 9\notify=false
 9\read=true
 9\reset=false
 9\revision=0
 9\scriptable=true
 9\stored=true
-9\type=bool
-9\typeStringName=
+9\type=
+9\typeStringName=TypeInheritsInformation
 9\user=false
 9\write=true
-size=10
+size=12
+11\name=WriteFunctionEmitSignal
+11\type=bool
+11\typeStringName=
+11\docName=
+11\docDetail=
+11\member=false
+11\read=true
+11\write=true
+11\reset=false
+11\notify=false
+11\revision=0
+11\designable=true
+11\scriptable=true
+11\stored=true
+11\user=false
+11\constant=false
+11\final=false
+11\enabled=true
+11\defaultValue=true
+12\name=WriteFunctionIsInline
+12\type=bool
+12\typeStringName=
+12\docName=
+12\docDetail=
+12\member=false
+12\read=true
+12\write=true
+12\reset=false
+12\notify=false
+12\revision=0
+12\designable=true
+12\scriptable=true
+12\stored=true
+12\user=false
+12\constant=false
+12\final=false
+12\enabled=true
+12\defaultValue=false
